# scancode-plugins

./: .gitignore  README.rst  configure  homebrew.py  msys2.py  requirements.txt
binary-analysis/scancode-compiledcode/: MANIFEST.in  NOTICE  README.md  README.rst  setup.cfg  setup.py
binary-analysis/scancode-ctags-linux/: MANIFEST.in  setup.cfg
binary-analysis/scancode-ctags-macosx/: setup.cfg
binary-analysis/scancode-ctags-win64/: setup.cfg  setup.py
binary-analysis/scancode-dwarfdump-linux/: setup.py
builtins/textcode_pdf2text-macosx/: .bumpversion.cfg  MANIFEST.in  setup.cfg  setup.py  textcode-pdf2text.ABOUT
builtins/textcode_pdf2text-macosx/src/textcode_pdf2text/: __init__.py
builtins/typecode_libmagic_from_sources/: .bumpversion.cfg  MANIFEST.in  README.rst  build.sh  setup.cfg  setup.py
builtins/typecode_libmagic_from_sources/lib-src/: file-5.39.tar.gz.ABOUT
builtins/typecode_libmagic_from_sources/src/typecode_libmagic/: __init__.py
builtins/typecode_libmagic_from_sources/src/typecode_libmagic/data/: .gitignore
builtins/typecode_libmagic_from_sources/src/typecode_libmagic/lib/: .gitignore
etc/scripts/: 7z.py  msys2.py  (+6 more)
extractcode_libarchive-win32/: setup.py
extractcode_libarchive-win_amd64/: setup.py
filter-ignorable-copyrights/: README.md  setup.py
src/: .gitignore  build.sh  origin.ABOUT
src-msys2/: repo.msys2.org-mingw-sources.html  repo.msys2.org-mingw-x86_64.html
src-xpdf/: origin.ABOUT  pdftotext.txt  xpdf-4.03.tar.gz.ABOUT  xpdf-tools-linux-4.03.tar.gz.ABOUT  xpdf-tools-mac-4.03.tar.gz.ABOUT  xpdf-tools-win-4.03.zip.ABOUT
(+464 files in other folders)
