[metadata]
license_files =
    apache-2.0.LICENSE
    gpl-2.0.LICENSE
    gpl-3.0.LICENSE
    README.rst
    pdf2text.ABOUT
    pdf2text.NOTICE
    textcode-pdf2text.ABOUT

[aliases]
release = clean --all bdist_wheel --plat-name macosx_10_13_intel.macosx_10_13_x86_64.macosx_11_0_x86_64 --python-tag py3
