[metadata]
license_files = 
    bsd-new.LICENSE
    bsd-original.LICENSE
    bsd-simplified.LICENSE
    bsd-simplified-darwin.LICENSE
    gpl-1.0.LICENSE
    gpl-1.0-plus.LICENSE
    isc.LICENSE
    libmagic.ABOUT
    libmagic.NOTICE
    public-domain.LICENSE
    README.rst
    typecode-libmagic.ABOUT

[aliases]
release = clean --all bdist_wheel --plat-name manylinux2014_x86_64 --python-tag py3 sdist
